# OTUS_2

./: app.py  pyproject.toml  requirements.txt
api/routers/: comics.py
templates/: about.html  index.html
