[tool.poetry]
name = "fastapi-hw"
version = "0.1.0"
description = "FastAPI First Project"
authors = ["Chernova_EE"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
fastapi = "^0.115.10"
uvicorn = "^0.34.0"
requests = "^2.32.3"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
